# hello-block

./: Cargo.toml  ChangeMe.ini  Chatter1-conf.ini  Chatter2-conf.ini  Dockerfile.dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
contract_src/: Chatter.abi.json  Chatter.sol
src/: lib.rs  main.rs
src/chatter/: contract.rs
