[package]
name = "hello-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "0.6.2", default-features = false, features = ["legacy", "abigen"] }
tokio = { version = "1.19.2", features = ["full"] }
rust-ini = "0.18"
url = "2.2.2"
hex = "0.4.3"
serde_json = "1.0.81"